ETL modified, saved some [asin] = name

--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -826,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -834,18 +834,139 @@
      "output_type": "stream",
      "text": [
       ">(1/100) Processing asin [B004AFQAUA]\n",
-      ">(1/100) HTTP ERROR\n"
+      "> App name is: [Napster] \n",
+      ">(2/100) Processing asin [B004AGCR1K]\n",
+      "> App name is: [Scan2PDF Mobile 2.0] \n",
+      ">(3/100) Processing asin [B004AHBBPW]\n",
+      "> App name is: [Daily Bible] \n",
+      ">(4/100) Processing asin [B004ALFHV2]\n",
+      "> App name is: [Free Calls and Free Texting, Photo and Video Sharing and Cheap International Calls by Voxofon] \n",
+      ">(5/100) Processing asin [B004ALJIOE]\n",
+      "> App name is: [Fast Reboot Pro] \n",
+      ">(6/100) Processing asin [B004ALM0K8]\n",
+      "> App name is: [Bubble Defense] \n",
+      ">(7/100) Processing asin [B004ALVL6W]\n",
+      "> App name is: [Bubble Defense 2] \n",
+      ">(8/100) Processing asin [B004AMAIZQ]\n",
+      "> App name is: [Fast Reboot] \n",
+      ">(9/100) Processing asin [B004AMDC86]\n",
+      "> App name is: [Enigma - Cryptograms] \n",
+      ">(10/100) Processing asin [B004AMFUYK]\n",
+      "> App name is: [Vegas Pool Sharks] \n",
+      ">(11/100) Processing asin [B004AMLATE]\n",
+      "> App name is: [Tank Ace 1944] \n",
+      ">(12/100) Processing asin [B004AMRGLA]\n",
+      "> App name is: [Gragger] \n",
+      ">(13/100) Processing asin [B004ANE2WU]\n",
+      "> App name is: [Par 72 Golf] \n",
+      ">(14/100) Processing asin [B004ANC00Q]\n",
+      "> App name is: [Car Locator] \n",
+      ">(15/100) Processing asin [B004ANMWPY]\n",
+      "> App name is: [TV Listings by TV24 - TV Guide] \n",
+      ">(16/100) Processing asin [B004AZH4C8]\n",
+      "> App name is: [Enjoy Sudoku] \n",
+      ">(17/100) Processing asin [B004AZXRRY]\n",
+      ">(17/100) HTTP ERROR\n",
+      ">(18/100) Processing asin [B004AZSY4K]\n",
+      "> App name is: [Overkill: Space Shooter] \n",
+      ">(19/100) Processing asin [B004BN3YQE]\n",
+      ">(19/100) HTTP ERROR\n",
+      ">(20/100) Processing asin [B004BVUVF8]\n",
+      ">(20/100) HTTP ERROR\n",
+      ">(21/100) Processing asin [B004C4FL5Y]\n",
+      "> App name is: [Bubble Blast 2] \n",
+      ">(22/100) Processing asin [B004C4FL9A]\n",
+      "> App name is: [Bubbles Deluxe] \n",
+      ">(23/100) Processing asin [B004CN5VFA]\n",
+      "> App name is: [Halloween Turkey Run Live Wallpaper] \n",
+      ">(24/100) Processing asin [B004CN7Y4G]\n",
+      "> App name is: [Thesaurus] \n",
+      ">(25/100) Processing asin [B004DJZBN0]\n",
+      "> App name is: [Total Recall Call Recorder] \n",
+      ">(26/100) Processing asin [B004DJXQDC]\n",
+      "> App name is: [Total Recall Call Recorder Demo] \n",
+      ">(27/100) Processing asin [B004DK37V2]\n",
+      "> App name is: [Happy Hours] \n",
+      ">(28/100) Processing asin [B004DKSUXC]\n",
+      "> App name is: [Spider Solitaire] \n",
+      ">(29/100) Processing asin [B004DLLNFS]\n",
+      ">(29/100) HTTP ERROR\n",
+      ">(30/100) Processing asin [B004DLNC4I]\n",
+      "> App name is: [Scanner Radio] \n",
+      ">(31/100) Processing asin [B004DL7DJ8]\n",
+      ">(31/100) HTTP ERROR\n",
+      ">(32/100) Processing asin [B004DLNBDA]\n",
+      ">(32/100) HTTP ERROR\n",
+      ">(33/100) Processing asin [B004DLLNPS]\n",
+      "> App name is: [WeFi - Automatic WiFi] \n",
+      ">(34/100) Processing asin [B004DKWCAO]\n",
+      "> App name is: [Spider] \n",
+      ">(35/100) Processing asin [B004DLPCYG]\n",
+      "> App name is: [My Currency] \n",
+      ">(36/100) Processing asin [B004DLPXAO]\n",
+      "> App name is: [Kindle for Android] \n",
+      ">(37/100) Processing asin [B004DLPBF6]\n",
+      ">(37/100) HTTP ERROR\n",
+      ">(38/100) Processing asin [B004DLUSD6]\n",
+      "> App name is: [Pop Pop Popcorn] \n",
+      ">(39/100) Processing asin [B004DLUY9Y]\n",
+      "> App name is: [Altitude] \n",
+      ">(40/100) Processing asin [B004DLTS4G]\n",
+      "> App name is: [FallDown] \n",
+      ">(41/100) Processing asin [B004DLZBU6]\n",
+      ">(41/100) HTTP ERROR\n",
+      ">(42/100) Processing asin [B004DLYJCC]\n",
+      "> App name is: [XiiaLive - Internet Radio] \n",
+      ">(43/100) Processing asin [B004DLUS4A]\n",
+      "> App name is: [iSyncr for iTunes to Android (Pro)] \n",
+      ">(44/100) Processing asin [B004DM19L0]\n",
+      "> App name is: [Lightning Theme] \n",
+      ">(45/100) Processing asin [B004DM1OAQ]\n",
+      "> App name is: [Backgammon Free] \n",
+      ">(46/100) Processing asin [B004DLVKW4]\n",
+      ">(46/100) HTTP ERROR\n",
+      ">(47/100) Processing asin [B004DM197Y]\n",
+      "> App name is: [View a Clue Zaza's Parade] \n",
+      ">(48/100) Processing asin [B004DM1ZQY]\n",
+      "> App name is: [Backgammon] \n",
+      ">(49/100) Processing asin [B004DM0UII]\n",
+      "> App name is: [XiiaLive Pro - Internet Radio] \n",
+      ">(50/100) Processing asin [B004DM0X8U]\n",
+      "> App name is: [Bubble Blast!] \n",
+      ">(51/100) Processing asin [B004DM4KDY]\n",
+      ">(51/100) HTTP ERROR\n",
+      ">(52/100) Processing asin [B004DM1ZG4]\n",
+      "> App name is: [Word Search Free] \n",
+      ">(53/100) Processing asin [B004DM28FQ]\n",
+      "> App name is: [Colossal Cave Adventure] \n",
+      ">(54/100) Processing asin [B004DM2X2O]\n",
+      "> App name is: [Repeater] \n",
+      ">(55/100) Processing asin [B004DM2X06]\n"
      ]
     },
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
+     "ename": "IncompleteRead",
+     "evalue": "IncompleteRead(287254 bytes read)",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-46-1b007537cddb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0murllib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0merror\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mHTTPError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\">(%d/100) HTTP ERROR\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m     \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/http/client.py\u001b[0m in \u001b[0;36m_get_chunk_left\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    543\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 544\u001b[0;31m                 \u001b[0mchunk_left\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_read_next_chunk_size\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    545\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/http/client.py\u001b[0m in \u001b[0;36m_read_next_chunk_size\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    510\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 511\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mline\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m16\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    512\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 16: b''",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mIncompleteRead\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/http/client.py\u001b[0m in \u001b[0;36m_readall_chunked\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    560\u001b[0m             \u001b[0;32mwhile\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 561\u001b[0;31m                 \u001b[0mchunk_left\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_chunk_left\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    562\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0mchunk_left\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/http/client.py\u001b[0m in \u001b[0;36m_get_chunk_left\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    545\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 546\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mIncompleteRead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mb''\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    547\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mchunk_left\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIncompleteRead\u001b[0m: IncompleteRead(0 bytes read)",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mIncompleteRead\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-51-1b007537cddb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\">(%d/100) Processing asin [%s]\"\u001b[0m \u001b[0;34m%\u001b[0m  \u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0masin\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m         \u001b[0mapp_name\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mamazon_scraper\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"https://www.amazon.com/dp/%s\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0masin\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"> App name is: [%s] \"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mapp_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m         \u001b[0masin_name\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0masin\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mapp_name\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Dropbox/MASTER/1rANY/Q2/OD/OD-Project/web_scraper.py\u001b[0m in \u001b[0;36mmain\u001b[0;34m(self, web_page)\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mweb_page\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 25\u001b[0;31m         \u001b[0mhtml_page\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_web\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mweb_page\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     26\u001b[0m         \u001b[0mapp_name\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_app_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhtml_page\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mapp_name\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Dropbox/MASTER/1rANY/Q2/OD/OD-Project/web_scraper.py\u001b[0m in \u001b[0;36mget_web\u001b[0;34m(self, web_page)\u001b[0m\n\u001b[1;32m      9\u001b[0m         \"\"\"\n\u001b[1;32m     10\u001b[0m         \u001b[0mf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0murllib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0murlopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mweb_page\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m         \u001b[0mhtml\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m         \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mhtml\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/http/client.py\u001b[0m in \u001b[0;36mread\u001b[0;34m(self, amt)\u001b[0m\n\u001b[1;32m    452\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    453\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchunked\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 454\u001b[0;31m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_readall_chunked\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    455\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    456\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlength\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/http/client.py\u001b[0m in \u001b[0;36m_readall_chunked\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    566\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0;34mb''\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    567\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mIncompleteRead\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 568\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mIncompleteRead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mb''\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    569\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    570\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_readinto_chunked\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIncompleteRead\u001b[0m: IncompleteRead(287254 bytes read)"
      ]
     }
    ],
@@ -874,10 +995,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'dict' object has no attribute 'to_csv'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-53-e201876f26e0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0masin_name\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"asin_name.csv\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'dict' object has no attribute 'to_csv'"
+     ]
+    }
+   ],
+   "source": [
+    "asin_name.to_csv(\"asin_name.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Store our results of getting asin and name.\n",
+    "\n",
+    "import json\n",
+    "with open('asin_name.json', 'w+') as fp:\n",
+    "    json.dump(asin_name, fp)"
+   ]
   },
   {
    "cell_type": "code",
