--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -60,6 +60,8 @@
     "import pandas as pd\n",
     "import glob\n",
     "import json\n",
+    "import re \n",
+    "\n",
     "\n",
     "data_sources = glob.glob(\"data_sources/*\")\n",
     "print(\"> Your available sources are: %s\" % \", \".join(data_sources))"
@@ -74,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,81 +139,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Delete nan + strange characters\n",
-    "\n",
+    "# Delete apps name that contains , or ; because this in csv format is another column, and this will crash in Neo4j\n",
+    "all_apps = all_apps.dropna()\n",
     "apps_name = all_apps['name']\n",
+    "apps_name = list(filter(lambda app: type(app) == str, list(apps_name)))\n",
     "\n",
-    "def clean(x):\n",
-    "    if type(x) == float:\n",
+    "def clean(app):\n",
+    "    if \";\" in app:\n",
     "        return False\n",
-    "    if \"???\" in x:\n",
+    "    if \",\" in app:\n",
     "        return False\n",
-    "    if x == 'nan':\n",
+    "    if \"??\" in app:\n",
+    "        return False\n",
+    "    if \":\" in app:\n",
+    "        return False\n",
+    "    if \".\" in app:\n",
+    "        return False\n",
+    "    if '\"' in app:\n",
     "        return False\n",
     "    return True\n",
-    "\n",
-    "\n",
-    "apps_name = list(filter(clean,apps_name))\n",
-    "\n",
+    "apps_name = list(filter(clean, apps_name))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Delete nan from metadata\n",
     "metadata_df = metadata_df[['asin', 'related', 'categories']].dropna()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'B004AFQAUA': 'Napster',\n",
-       " 'B004AGCR1K': 'Scan2PDF Mobile 2.0',\n",
-       " 'B004AHBBPW': 'Daily Bible',\n",
-       " 'B004ALFHV2': 'Free Calls and Free Texting, Photo and Video Sharing and Cheap International Calls by Voxofon',\n",
-       " 'B004ALVL6W': 'Bubble Defense 2',\n",
-       " 'B004AMAIZQ': 'Fast Reboot',\n",
-       " 'B004AMDC86': 'Enigma - Cryptograms',\n",
-       " 'B004AMFUYK': 'Vegas Pool Sharks',\n",
-       " 'B004AMLATE': 'Tank Ace 1944',\n",
-       " 'B004AMRGLA': 'Gragger',\n",
-       " 'B004ANE2WU': 'Par 72 Golf',\n",
-       " 'B004ANC00Q': 'Car Locator',\n",
-       " 'B004ANMWPY': 'TV Listings by TV24 - TV Guide',\n",
-       " 'B004AZH4C8': 'Enjoy Sudoku',\n",
-       " 'B004AZSY4K': 'Overkill: Space Shooter',\n",
-       " 'B004DLX6WQ': 'Black & White Theme',\n",
-       " 'B004DLX75W': 'Neon Cherries Theme',\n",
-       " 'B004DM1OAQ': 'Backgammon Free',\n",
-       " 'B004DM197Y': \"View a Clue Zaza's Parade\",\n",
-       " 'B004DM5L0U': 'Speed Dial Old School',\n",
-       " 'B004DM5L0K': 'Kids Piano',\n",
-       " 'B004DP30AU': 'Spell Checker',\n",
-       " 'B004DP9QFS': 'TerraTime'}"
-      ]
-     },
-     "execution_count": 80,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# If asin_name.json already exist, load it\n",
     "import json\n",
     "\n",
     "\n",
     "with open('asin_name.json', 'r') as f:\n",
-    "    asin_name = json.load(f)"
+    "    asin_name = json.load(f)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 175,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">(0/100) Processing asin [B004A9SDD8]\n",
+      ">(0/100) HTTP ERROR\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-175-9ec9deb2f7ee>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     18\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0murllib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0merror\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mHTTPError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\">(%d/100) HTTP ERROR\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m         \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "# Generate dictonary of, which asin is each App Name\n",
     "from web_scraper import Scraper\n",
@@ -264,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,51 +308,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>app</th>\n",
-       "      <th>related</th>\n",
-       "      <th>kind</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [app, related, kind]\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 83,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Related table which apps are related with which.\n",
     "\n",
@@ -361,13 +328,12 @@
     "                    if app_related in asin_name:\n",
     "                        values.append((app, asin_name[app_related], kind_relation))                \n",
     "    return pd.DataFrame(values, columns=(\"app\", \"related\", \"kind\"))\n",
-    "\n",
-    "gen_related_table(metadata_df, asin_name)"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,6 +390,20 @@
     "df_related_table.to_csv(\"integrated_data/related.csv\")\n",
     "df_reviews_table.to_csv(\"integrated_data/reviews.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
