graph creation done

--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -139,37 +139,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Delete apps name that contains , or ; because this in csv format is another column, and this will crash in Neo4j\n",
+    "# Delete apps name that contains , or ; because this in csv format is another column, and this will crash in Neo4j.\n",
+    "# also delete this which its name is only ???? due to them contain extrange characters.\n",
     "all_apps = all_apps.dropna()\n",
-    "apps_name = all_apps['name']\n",
-    "apps_name = list(filter(lambda app: type(app) == str, list(apps_name)))\n",
-    "\n",
-    "def clean(app):\n",
-    "    if \";\" in app:\n",
-    "        return False\n",
-    "    if \",\" in app:\n",
-    "        return False\n",
-    "    if \"??\" in app:\n",
-    "        return False\n",
-    "    if \":\" in app:\n",
-    "        return False\n",
-    "    if \".\" in app:\n",
-    "        return False\n",
-    "    if '\"' in app:\n",
-    "        return False\n",
-    "    return True\n",
-    "apps_name = list(filter(clean, apps_name))"
+    "all_apps = all_apps[[False if ',' in app or '?' in app or ';' in app or '\"' in app else True for app in  all_apps['name']]]\n",
+    "apps_name = list(all_apps['name'])"
    ]
   },
   {
@@ -178,8 +156,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Delete nan from metadata\n",
-    "metadata_df = metadata_df[['asin', 'related', 'categories']].dropna()\n"
+    "# Delete nan from metadata and reviews\n",
+    "metadata_df = metadata_df[['asin', 'related', 'categories']].dropna()\n",
+    "reviews_df = reviews_df.dropna()"
    ]
   },
   {
@@ -193,34 +172,14 @@
     "\n",
     "\n",
     "with open('asin_name.json', 'r') as f:\n",
-    "    asin_name = json.load(f)\n"
+    "    asin_name = json.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      ">(0/100) Processing asin [B004A9SDD8]\n",
-      ">(0/100) HTTP ERROR\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-175-9ec9deb2f7ee>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     18\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0murllib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0merror\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mHTTPError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\">(%d/100) HTTP ERROR\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m         \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Generate dictonary of, which asin is each App Name\n",
     "from web_scraper import Scraper\n",
@@ -273,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,6 +313,64 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "set()"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Backgammon Free',\n",
+       " 'Black & White Theme',\n",
+       " 'Bubble Defense 2',\n",
+       " 'Car Locator',\n",
+       " 'Daily Bible',\n",
+       " 'Enigma - Cryptograms',\n",
+       " 'Enjoy Sudoku',\n",
+       " 'Fast Reboot',\n",
+       " 'Free Calls and Free Texting, Photo and Video Sharing and Cheap International Calls by Voxofon',\n",
+       " 'Gragger',\n",
+       " 'Kids Piano',\n",
+       " 'Napster',\n",
+       " 'Neon Cherries Theme',\n",
+       " 'Overkill: Space Shooter',\n",
+       " 'Par 72 Golf',\n",
+       " 'Scan2PDF Mobile 2.0',\n",
+       " 'Speed Dial Old School',\n",
+       " 'Spell Checker',\n",
+       " 'TV Listings by TV24 - TV Guide',\n",
+       " 'Tank Ace 1944',\n",
+       " 'TerraTime',\n",
+       " 'Vegas Pool Sharks',\n",
+       " \"View a Clue Zaza's Parade\"}"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -362,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,6 +414,33 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Write a reduced data set, as a 'demo' of the ETL system\n",
+    "   - Only pick this apps which we known the relation Asin -> App Name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "valid_apps = list(asin_name.values())\n",
+    "df_app_table_reduced = df_app_table[[True if app in valid_apps else False for app in list(all_apps['name'])]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_app_table_reduced.to_csv(\"integrated_data/app_reduced.csv\")"
+   ]
   },
   {
    "cell_type": "code",
