--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -71,12 +71,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Import data from kaggle data source"
+    "### Import data from kaggle data source\n",
+    "\n",
+    "- Important, it is a must, have a directory named \"data_sources\" in the root of the folder with apps.csv file."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -98,12 +100,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Import data of amazon reviews and apps"
+    "### Import data of amazon reviews and apps\n",
+    "\n",
+    "- Important, it is a must, have a directory named \"data_sources\" in the root of the folder with meta_Apps_for_Android.json and reviews_Apps_for_Android.json files."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,11 +252,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Categories table, which category for each app.\n",
+    "# Categories table: which category for each app.\n",
     "\n",
     "def gen_categories_table(metadata, asin_name):\n",
     "    values = []\n",
@@ -267,11 +271,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Related table which apps are related with which.\n",
+    "# Related table: which apps are related with which.\n",
     "\n",
     "def gen_related_table(metadata, asin_name):\n",
     "    values = []\n",
@@ -292,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,13 +353,6 @@
     "df_related_table.to_csv(\"integrated_data/related.csv\")\n",
     "df_reviews_table.to_csv(\"integrated_data/reviews.csv\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
